# building_software_assignment

./: Analysis.py  LICENSE  README.md  pyproject.toml  test_Analysis.py
Analysis.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
configs/: system_config.yml  user_config.yml
configs.egg-info/: PKG-INFO  SOURCES.txt
